--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -96,7 +96,9 @@
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Substitution}\<%
 \end{code}
+}
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{private}\<%
 \\
@@ -139,9 +141,43 @@
 \AgdaFunction{Scope}\<%
 \\
 %
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- a thinning}\<%
+\>[4]\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Dir}\<%
 \\
+%
+\>[4]\AgdaGeneralizable{T}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scoped}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{X}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{Y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{n}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
+\end{code}
+}
+
+A key concept that will be used throught this implementation is that
+of a Thinning. Thinnings describe embeddings between scopes and are
+denoted $δ ⊑ γ$ where they are embedding some scope $δ$ into another
+scope $γ$ and as such is must be that $δ \leq γ$.
+
+Thinnings can be represented as bit-vectors $γ$ digits long where each
+digit identifies what is 'new' in $γ$, or alternatively, for things scoped
+in $γ$, which of them existed in $δ$. Ouut implementation follows this
+intuiting and also enforces the $δ < γ$ invariant by construction.
+
+\begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}⊑\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -187,62 +223,24 @@
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
 \AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- identity thinning}\<%
-\\
+\end{code}
+
+We define some elements for later use: the identity thinning, the empty
+thinning and what it means to append two thinnings as well as injections
+to a concatenation in both directions. Their type signatures are as follows.
+
+\begin{code}%
 \>[0]\AgdaFunction{ι}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\\
-\>[0]\AgdaFunction{ι}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}%
-\>[10]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-\>[0]\AgdaFunction{ι}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{ι}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{I}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- empty thinning}\<%
+\AgdaGeneralizable{γ}\<%
 \\
 \>[0]\AgdaFunction{Ø}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaNumber{0}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\\
-\>[0]\AgdaFunction{Ø}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}%
-\>[10]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-\>[0]\AgdaFunction{Ø}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Ø}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{O}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- appending a thinning}\<%
+\AgdaGeneralizable{γ}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -262,6 +260,69 @@
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaGeneralizable{γ'}\AgdaSymbol{)}\<%
 \\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}◃\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}▹\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{)}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+\>[0]\AgdaFunction{ι}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}%
+\>[10]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\<%
+\\
+\>[0]\AgdaFunction{ι}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{ι}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{I}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{Ø}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{zero}\AgdaSymbol{\}}%
+\>[10]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\<%
+\\
+\>[0]\AgdaFunction{Ø}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{Ø}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{O}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}++\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -337,6 +398,49 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}%
+\>[11]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{ι}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\<%
+\\
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{δ}%
+\>[11]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{O}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
+\AgdaInductiveConstructor{zero}%
+\>[11]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{Ø}\<%
+\\
+\>[0]\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
+\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{δ}%
+\>[11]\AgdaKeyword{rewrite}\AgdaSpace{}%
+\AgdaFunction{+-suc}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{I}}\<%
+\end{code}
+}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
@@ -373,11 +477,50 @@
 \AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}I}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{++-identityʳ}\AgdaSpace{}%
 \AgdaBound{θ}\AgdaSymbol{)}\<%
+\end{code}
+}
+
+It is also worth noting here that all variables can be represented as
+singlton thinnings where the thinning identifies the selection of a
+variable from the scope.
+
+\begin{code}%
+\>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Var}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaNumber{1}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- Thinnability}\<%
+\>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}%
+\>[22]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{Ø}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{I}}\<%
 \\
+\>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧var}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{O}}\<%
+\end{code}
+
+There are various scoped entities on which it makes sense for thinnings
+to act by lifting the entity into a wider scope. To capture this commonly
+used behaviour we introduce the concept of Thinnable and also provide its
+counterpart Selectable for the opposite action of using some thinning to
+somehow narrow the scope.
+
+\begin{code}%
 \>[0]\AgdaFunction{Thinnable}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scoped}\AgdaSpace{}%
@@ -403,8 +546,6 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- Selectability (the opposite of thinning)}\<%
-\\
 \>[0]\AgdaFunction{Selectable}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scoped}\AgdaSpace{}%
@@ -427,19 +568,70 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{X}\AgdaSpace{}%
 \AgdaBound{δ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- thinning composition}\<%
-\\
-\>[0]\AgdaComment{-- action of a thinning on a thining}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\end{code}
+
+There are many scoped entities that we will wish a thinning to act on,
+and so we adopt the convention that all functions detailing an action
+of thinnings take the form $⟨\mbox{some-entity}}$ with the exception of the
+action of a thinning on another thinning which equates to composition
+and so we use the more traditional $∘$ notation. We detail various
+thinning actions here that we will use later.
+
+\begin{code}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘\AgdaUnderscore{}}}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{γ₁}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaDatatype{Var}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var⊗\AgdaUnderscore{}}}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{Var}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term⊗\AgdaUnderscore{}}}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
+\AgdaBound{δ}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaFunction{⟨sub}%
+\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\end{code}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaInductiveConstructor{ε}%
 \>[6]\AgdaOperator{\AgdaFunction{∘}}%
 \>[9]\AgdaInductiveConstructor{ε}%
@@ -480,13 +672,6 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- variables are thinnable}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaDatatype{Var}\<%
-\\
 \>[0]\AgdaBound{v}%
 \>[5]\AgdaOperator{\AgdaFunction{⟨var}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{θ}\AgdaSpace{}%
@@ -517,19 +702,6 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can thin opened variables}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var⊗\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaSymbol{(λ}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{))}\<%
-\\
 \>[0]\AgdaBound{v}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟨var⊗}}%
 \>[9]\AgdaInductiveConstructor{ε}%
@@ -557,73 +729,6 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- variables are singleton thinnings}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Var}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaNumber{1}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaGeneralizable{γ}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaInductiveConstructor{ze}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Ø}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{I}}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧var}}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{O}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaKeyword{private}\<%
-\\
-\>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaKeyword{variable}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Dir}\<%
-\\
-%
-\>[4]\AgdaGeneralizable{X}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
-\\
-%
-\>[4]\AgdaGeneralizable{Y}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
-\\
-%
-\>[4]\AgdaGeneralizable{n}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{ℕ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- terms are thinnable}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
-\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
@@ -714,20 +819,6 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can thin an opened term}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term⊗\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaSymbol{(λ}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{))}\<%
-\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨term⊗\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
@@ -817,14 +908,44 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- We can select from BwdVec using a thinning}\<%
+\>[0]\AgdaFunction{⟨sub}\AgdaSpace{}%
+\AgdaBound{⟨T}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\AgdaSpace{}%
+\AgdaBound{θ}%
+\>[19]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\<%
 \\
+\>[0]\AgdaFunction{⟨sub}\AgdaSpace{}%
+\AgdaBound{⟨T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{⟨sub}\AgdaSpace{}%
+\AgdaBound{⟨T}\AgdaSpace{}%
+\AgdaBound{σ}\AgdaSpace{}%
+\AgdaBound{θ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaBound{⟨T}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{θ}\<%
+\end{code}
+}
+
+While Selectable is used far less often, there are key areas where it makes
+sense, for instance in using a thinning to select elements from a vector.
+
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}!\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Selectable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{BwdVec}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSymbol{)}\<%
-\\
+\end{code}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaInductiveConstructor{ε}%
 \>[6]\AgdaOperator{\AgdaFunction{!}}\AgdaSpace{}%
 \AgdaInductiveConstructor{ε}%
@@ -853,159 +974,29 @@
 \AgdaOperator{\AgdaFunction{!}}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSymbol{)}\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaBound{x}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- injections}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}◃\AgdaUnderscore{}}}\AgdaSpace{}%
+\end{code}
+}
+
+A weakening is a special case of a thinning where the scope is extended by
+one at its most local position, for instance when passing under a binder.
+This concept is captured here, as well as the relavent type that detailing
+the action of a weakening. A function is provided to weaken anything Thinnable.
+
+\begin{code}%
+\>[0]\AgdaFunction{↑}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
-\AgdaInductiveConstructor{zero}%
-\>[11]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{ι}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\<%
-\\
-\>[0]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
-\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{δ}%
-\>[11]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{O}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}▹\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
-\AgdaInductiveConstructor{zero}%
-\>[11]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Ø}\<%
-\\
-\>[0]\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
-\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{δ}%
-\>[11]\AgdaKeyword{rewrite}\AgdaSpace{}%
-\AgdaFunction{+-suc}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{▹}}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{I}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- and substitutions are thinnable}\<%
-\\
-\>[0]\AgdaComment{-- if the thing it is substituting is thinnable}\<%
-\\
-\>[0]\AgdaFunction{⟨sub}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{T}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
-\>[0]\AgdaFunction{⟨sub}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaBound{θ}%
-\>[19]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-\>[0]\AgdaFunction{⟨sub}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{θ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{⟨sub}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
-\AgdaBound{θ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{θ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- weakening}\<%
-\\
-\>[0]\AgdaFunction{Weakening}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
-\\
-\>[0]\AgdaFunction{Weakening}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
+\AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{↑}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakening}\<%
+\AgdaGeneralizable{γ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{↑}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{ι}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{O}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- a Weakening has an action on a Weakenable thing}\<%
-\\
 \>[0]\AgdaFunction{Weakenable}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scoped}\AgdaSpace{}%
@@ -1027,19 +1018,13 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can weaken anything thinnable}\<%
-\\
 \>[0]\AgdaFunction{weaken}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{T}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scoped}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaBound{T}\<%
+\AgdaGeneralizable{T}\<%
 \\
 \>[0]\AgdaFunction{weaken}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{T}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -1049,16 +1034,46 @@
 \AgdaBound{⟨}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaFunction{↑}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- so for a start we can weaken thinnings themselves}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\end{code}
+
+When providing Weakenables, we adopt the naming convention of \^̂some-entity.
+
+As a consequence of being able to easily weaken Thinnable entities, Weakenable
+implementations are often trivial.
+
+\begin{code}%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Weakenable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊑\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}var}}%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaDatatype{Var}\<%
+\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}term}}%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaFunction{\textasciicircum{}sub}%
+\>[8]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+\>[0]\AgdaComment{-- so for a start we can weaken thinnings themselves}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1070,11 +1085,6 @@
 \>[0]\AgdaComment{-- variables are weakenable}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}var}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaDatatype{Var}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}var}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{weaken}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var\AgdaUnderscore{}}}\<%
@@ -1083,12 +1093,8 @@
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{-- terms are weakenable}\<%
 \\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}term}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaGeneralizable{d}\AgdaSymbol{)}\<%
-\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}term}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{d}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -1105,41 +1111,15 @@
 \\
 \>[0]\AgdaComment{-- they substitute is Thinnable}\<%
 \\
-\>[0]\AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{T}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\>[0]\AgdaComment{-- map!!!}\<%
 \\
 \>[0]\AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
 \AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}%
-\>[27]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-\>[0]\AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}-,\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{n}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{\textasciicircum{}sub}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaFunction{weaken}\AgdaSpace{}%
-\AgdaBound{⟨T}\AgdaSpace{}%
-\AgdaBound{x}\<%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{weaken}\AgdaSpace{}%
+\AgdaBound{⟨T}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{σ}\<%
 \end{code}
 }
