--- a/TypeCheckerGenerator/latex/Context.tex
+++ b/TypeCheckerGenerator/latex/Context.tex
@@ -48,24 +48,6 @@
 
 \hide{
 \begin{code}%
-\>[0]\AgdaFunction{Context}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\<%
-\\
-\>[0]\AgdaFunction{Context}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
-\AgdaBound{γ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{private}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
@@ -85,15 +67,62 @@
 \>[4]\AgdaGeneralizable{γ'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\<%
+\end{code}
+}
+
+Building on our definitions of substitution and thinning we are now
+able to describe our context.
+
+A context is a substitution of constructions. We ensure that the target
+of the substitution is scoped identically to the things we will substitute,
+keeping our contexts in a pre-thinned state.This allows us to use terms
+directly from it without having to fix up the scope first.
+
+We define actions of thinnings and weakenings on substitutions of constructions
+but are careful to note that by thinning or weakening a context, the result
+is not necessarily a context as the scope of the targets and substituted terms
+may no longer be equal.
+
+\begin{code}%
+\>[0]\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+\>[0]\AgdaFunction{Context}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
+\AgdaBound{γ}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- since contexts are just substitutions we can use the selection}\<%
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨Γ\AgdaUnderscore{}}}%
+\>[6]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Thinnable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaComment{-- already defined for BwdVec \AgdaUnderscore{}!\AgdaUnderscore{} and define variables lookup in}\<%
-\\
-\>[0]\AgdaComment{-- terms of this}\<%
-\\
+\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}Γ}}%
+\>[6]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Weakenable}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
+\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\end{code}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}‼V\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Var}\AgdaSpace{}%
@@ -109,36 +138,15 @@
 \>[0]\AgdaBound{v}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{‼V}}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
-\AgdaKeyword{with}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟧var}}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{!}}\AgdaSpace{}%
-\AgdaBound{Γ}\<%
-\\
-\>[0]\AgdaSymbol{...}\AgdaSpace{}%
-\AgdaSymbol{|}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{x}\<%
+\AgdaFunction{lookup}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
+\AgdaInductiveConstructor{const}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{v}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- we can apply a thinning generally to \AgdaUnderscore{}⇒[ Term lib const ]\AgdaUnderscore{}}\<%
-\\
-\>[0]\AgdaComment{-- but we are not guaranteed that the result will be a context}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨Γ\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Thinnable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
 \>[0]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟨Γ}}\AgdaSpace{}%
 \AgdaBound{θ}\AgdaSpace{}%
@@ -148,30 +156,25 @@
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{θ}\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- and therefore \AgdaUnderscore{}⇒[ Term lib const ]\AgdaUnderscore{}  can be weakened}\<%
-\\
-\>[0]\AgdaComment{-- (thus contexts can be weakened but are no longer contexts)}\<%
-\\
-\>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}Γ}}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Weakenable}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}Γ}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{weaken}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨Γ\AgdaUnderscore{}}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- Which means we can define context extension}\<%
-\\
+\end{code}
+}
+
+We provide a special function to extend contexts which appends a new
+element to the context (making it no longer a context as $suc γ \neq γ$ in
+$(suc γ) ⇒[ \mbox{Term const} ] γ$) before weakening the whole substitution
+yielding the context $(suc γ) \mbox{⇒[Term const]} (suc γ)$. The extra effort
+exerted here keeps our contexts in a pre-thinned state allowing us
+to use terms directly from it without having to fix up the scope first.
+
+If we only ever use $ε$ and $\_ , \_$ to construct our contexts, we can be assured
+that they will always be valid and pre-thinned. No such assurances can
+be made if the raw vector appending data constructor $\_ -,\_$ is used.
+
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Context}\AgdaSpace{}%
@@ -193,21 +196,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\textasciicircum{}Γ}}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- Now if we only ever use ε and \AgdaUnderscore{},\AgdaUnderscore{} context extension, we are}\<%
-\\
-\>[0]\AgdaComment{-- guaranteed that our contexts WILL BE VALID AND PRE-THINNED}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- and we can apply substitutions generally to \AgdaUnderscore{}⇒[ Term lib const ]\AgdaUnderscore{}}\<%
-\\
-\>[0]\AgdaComment{-- but we are not guaranteed that the result will be a Context}\<%
-\\
-\>[0]\AgdaComment{-- unless γ = γ'}\<%
-\\
+\end{code}
+
+Finally, we define the application of a substitution of constructions
+so that the substitution might be mapped across all elements in the
+context conveniently, but again we are careful to note that applying
+this action to a context may not yield a context as explained previously.
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/Γ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
@@ -227,31 +222,16 @@
 \AgdaInductiveConstructor{const}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaGeneralizable{γ'}\<%
-\\
-\>[0]\AgdaInductiveConstructor{ε}\AgdaSpace{}%
+\end{code}
+\hide{
+\begin{code}%
+\>[0]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{/Γ}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\<%
-\\
-\>[0]\AgdaSymbol{(}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{/Γ}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{/Γ}}\AgdaSpace{}%
+\AgdaFunction{map}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/term}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{-- since contexts are just substitutions, we can look up variables in}\<%
-\\
-\>[0]\AgdaComment{-- contexts using 'Thinning.lookup'}\<%
+\AgdaBound{Γ}\<%
 \end{code}
 }
